array date & daily cases

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <div>Covid info</div>
 
   <form action="">
-    <input type="text">
-    <button type="submit">Go</button>
+    <input type="text" id="country">
+    <button onclick="getCountry()">Go</button>
   </form>
-
+  <div class="country"></div>
   <div class="countries"></div>
 
 </body>
