--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <button onclick="getCountry()">Go</button>
   </form>
   <div class="country"></div>
+  <div>Yesterday: <p class="today"></p>
+  </div>
   <div class="countries"></div>
 
 </body>
