--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script> <!-- google charts -->
   <title>Covid info</title>
 </head>
 
@@ -17,10 +18,17 @@
     <button onclick="getCountry()">Go</button>
   </form>
   <br>
-  <div class="country"></div>
-  <br>
-  <div>Yesterday: <p class="today"></p>
+  <div>Country: <p class="country"></p>
   </div>
+  <br>
+  <div>Last data: <p class="today"></p>
+  </div>
+  <br>
+  <label for="number-of-days">Number of days:</label>
+  <input type="number" id="number-of-days" value="">
+
+  <div id="country-chart" style="width: 900px; height: 500px"></div>
+
   <div class="country-data"></div>
   <br>
   <div class="countries-list"></div>
