Totals chart added

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
   <input type="number" id="number-of-days" value="">
 
   <div id="country-chart" style="width: 900px; height: 500px"></div>
+  <div id="country-totals" style="width: 900px; height: 500px"></div>
 
-  <div class="country-data"></div>
+  <!-- <div class="country-data"></div>
   <br>
-  <div class="countries-list"></div>
+  <div class="countries-list"></div> -->
 
   <svg class="loading" width="512" height="512" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path
