--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <div>Country: <p class="country"></p>
   </div>
   <br>
-  <div>Last data: <p class="today"></p>
+  <div>Last data:<p class="last-date"></p>
+    <p class="last-number"></p>
   </div>
   <br>
   <label for="number-of-days">Number of days:</label>
