--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <br>
   <form action="">
     <label for="number-of-days">Number of days:</label>
-    <input type="number" id="number-of-days" value="">
+    <input type="number" id="number-of-days" step="10" min="10" max="1000">
     <button onclick="setNumberOfDays()" type="button">Go</button>
   </form>
 
