--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <form action="">
     <input type="text" value="" id="country" name="country" placeholder="Enter country">
-    <button onclick="setCountry()" type="button">Go</button>
+    <button onclick="setState()" type="button">Go</button>
   </form>
   <br>
   <div>Current country: <p class="country"></p>
@@ -28,7 +28,7 @@
   <form action="">
     <label for="number-of-days">Number of days:</label>
     <input type="number" id="number-of-days" step="10" min="10" max="1000">
-    <button onclick="setNumberOfDays()" type="button">Go</button>
+    <button onclick="setState()" type="button">Go</button>
   </form>
 
   <div id="country-chart" style="width: 900px; height: 500px"></div>
