--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" href="./css/style.css">
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script> <!-- google charts -->
   <title>Covid info</title>
@@ -22,7 +24,8 @@
   </div>
   <br>
   <div>Latest data:<p class="last-date"></p>
-    <p class="last-number"></p>
+    <div>Daily cases:<p class="last-number"></p>
+    </div>
   </div>
   <br>
   <form action="">
