list of countries generated

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <form action="">
     <input type="text" value="" id="country" name="country" placeholder="Enter country">
+    <ul class="countries-list">COUNTRIES </ul>
     <button onclick="setState()" type="button">Go</button>
   </form>
   <br>
