--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
   <h1>Covid info</h1>
 
-  <form action="">
-    <input type="text" value="" id="country" name="country" placeholder="Enter country">
-    <ul class="countries-list"></ul>
+  <form autocomplete="off">
+    <input class="country-input" type="text" value="" id="country" name="country" placeholder="Enter country">
     <button onclick="setState()" type="button">Go</button>
+    <ul class="countries-list"></ul>
   </form>
   <br>
   <div>Current country: <p class="country"></p>
