Button for country removed

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
         </div>
         <div class="label">Daily cases<p class="last-number"></p>
         </div>
-        <div class="label">Date<p class="last-date"></p>
+        <div class="label">Data for<p class="last-date"></p>
         </div>
       </div>
 
       <div class="controls">
         <form autocomplete="off">
           <input class="country-input" type="text" value="" id="country" name="country" placeholder="Enter country">
-          <button class=".button-country" onclick="setState()" type="button">Change</button>
+          <!-- <button onclick="setState()" type="button">Change</button> -->
           <ul class="countries-list"></ul>
         </form>
 
