--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="UTF-8">
@@ -32,26 +32,27 @@
 
       <div class="controls">
         <form autocomplete="off">
-          <input class="country-input" type="text" value="" id="country" name="country" placeholder="Enter country">
+          <input class="country-input" type="text" value="" id="country" name="country" placeholder="Enter new country">
           <!-- <button onclick="setState()" type="button">Change</button> -->
           <ul class="countries-list"></ul>
         </form>
 
         <form action="">
-          <label for="number-of-days">Number of days:</label>
+          <label for="number-of-days">Days:</label>
           <input type="number" id="number-of-days" step="10" min="10" max="1000">
-          <button onclick="setState()" type="button">Change</button>
+          <button onclick="setState()" type="button">OK</button>
         </form>
       </div>
     </div>
 
     <div class="charts">
-      <div class="chart" id="country-chart" style="width: 900px; height: 500px"></div>
+      <!-- <div class="chart" id="country-chart" style="width: 900px; height: 500px"></div>
       <div class="chart" id="country-totals" style="width: 900px; height: 500px"></div>
-      <div class="chart" id="country-total-deaths" style="width: 900px; height: 500px"></div>
+      <div class="chart" id="country-total-deaths" style="width: 900px; height: 500px"> -->
+      <div class="chart" id="country-chart"></div>
+      <div class="chart" id="country-totals"></div>
+      <div class="chart" id="country-total-deaths"></div>
     </div>
-
-    <div class="summary"></div>
 
     <svg class="loading" width="512" height="512" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path
