--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     gtag('js', new Date());
     gtag('config', 'G-C33D9BRL24');
   </script>
+  <link rel="shortcut icon" type="image/svg" href="img/covid.svg">
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" href="./css/style.css">
