--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <div class="controls">
         <form autocomplete="off">
-          <input class="country-input" type="text" value="" id="country" name="country" placeholder="Enter new country">
+          <input class="country-input" type="text" value="" id="country" name="country" placeholder="Change country">
           <!-- <button onclick="setState()" type="button">Change</button> -->
           <ul class="countries-list"></ul>
         </form>
